Fix content container scrollable scrollable region too small
makes it annoying to find where to put the mouse (for scrollwheel)
or to drag (for mobile)

--- a/src/shared/components/ContentContainer.module.css
+++ b/src/shared/components/ContentContainer.module.css
@@ -5,7 +5,11 @@
   align-items: stretch;
 }
 
-.scrolls {
+.scrollWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: flex-start;
   flex: 0 1 auto;
   overflow-y: auto;
   -ms-overflow-style: none; /* IE and Edge */
